--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,485 @@
-body {
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+  /* dark shades of primary color*/
+  --clr-primary-1: white;
+  --clr-primary-2: hsl(205, 77%, 27%);
+  --clr-primary-3: hsl(205, 72%, 37%);
+  --clr-primary-4: hsl(205, 63%, 48%);
+  /* primary/main color */
+  --clr-primary-5: hsl(205, 78%, 60%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-7: hsl(205, 90%, 76%);
+  --clr-primary-8: hsl(205, 86%, 81%);
+  --clr-primary-9: hsl(205, 90%, 88%);
+  --clr-primary-10: hsl(205, 100%, 96%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-black: #222;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: var(--clr-grey-10);
+  color: var(--clr-primary-1);
+  line-height: 1.5;
+  font-size: 0.875rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar{
+  display: none;
+}
+.date{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.date h2{
+
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.current{
+  padding: 0 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.numb{
+  display: flex;
+  align-items: center;
+}
+.mad{
+  padding: 2rem 4rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25 );
+  backdrop-filter: blur(5px);
+  height: 15rem;
+  width: 40rem;
+}
+.mad2{
+  margin: 2rem 1rem;
+  padding: 2rem ;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25 );
+  backdrop-filter: blur(5px);
+  height: 15rem;
+  display: flex;
+  justify-content: space-between;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  /* width: 100vw; */
+}
+.mad2::-webkit-scrollbar{
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* #root{
+  width: 100vw;
+  height: 100vh;
+} */
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  /* margin-bottom: 1.25rem; */
+  /* color: var(--clr-grey-5); */
+}
+.info{
+  padding: 3rem 3rem;
+}
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 3rem;
+    text-shadow: 2px 2px 8px #000000;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+}
+.btn {
+  text-transform: uppercase;
+  background: transparent;
+  color: var(--clr-black);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-black);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+}
+.btn:hover {
+  color: var(--clr-white);
+  background: var(--clr-black);
+}
+/* section */
+.section {
+  padding: 5rem 0;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 35rem;
+  margin-top: 2rem;
+}
+.spinner {
+  text-align: center;
+  margin: 5rem auto;
+  border: 3px solid white;
+  border-top: 3px solid black;
+  animation: rotate 0.5s linear infinite;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+}
+.mad-content1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.mad-content2{
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.maddd{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: ; */
+}
+.sunn{
+  display: flex;
+  align-items: center;
+  padding: 0.3rem 0;
+  gap: 1rem;
+}
+.sun{
+  padding: 0.1rem 0;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
+}
+.set{
+  width: 30px;
+  height: 30px;
+}
+.imgUrl{
+  width: 15rem;
+}
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
+main {
+  min-height: 110vh;
+  overflow: hidden;
+  /* display: grid;
+  place-items: center; */
+}
+.video{
+  position: absolute;
+  width: 100vw;
+  height: 110vh;
+  top: 0;
+  left: 0;
+  z-index: -5;
+}
+.hour{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+video{
+  width: 100vw;
+  height: 100%;
+  object-fit: cover;
+}
+/*
+=============== 
+Grocery List
+===============
+*/
+.section-center {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+  /* padding: 2rem; */
+}
+.section-center:hover {
+  box-shadow: var(--dark-shadow);
+}
+.alert {
+  margin-bottom: 1rem;
+  height: 1.25rem;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: 0.7rem;
+  border-radius: 0.25rem;
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+}
+.alert-danger {
+  color: #721c24;
+  background: #f8d7da;
+}
+.alert-success {
+  color: #155724;
+  background: #d4edda;
+}
+.grocery-form h3 {
+  color: var(--clr-primary-1);
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.form-control {
+  display: flex;
+  justify-content: center;
+}
+.grocery {
+  padding: 0.25rem;
+  padding-left: 1rem;
+  background: var(--clr-grey-10);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-grey-5);
+}
+.grocery::placeholder {
+  font-family: var(--ff-secondary);
+  color: var(--clr-grey-5);
+}
+.submit-btn {
+  background: var(--clr-primary-8);
+  border-color: transparent;
+  flex: 0 0 5rem;
+  display: grid;
+  align-items: center;
+  padding: 0.25rem;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+  cursor: pointer;
+  content: var(--clr-primary-5);
+  transition: var(--transition);
+  font-size: 0.85rem;
+}
+.submit-btn:hover {
+  background: var(--clr-primary-5);
+  color: var(--clr-white);
+}
+
+@media screen and (max-width: 1200px) {
+  :root{
+    font-size: 14px;
+  }
+  main{
+    height: 120vh;
+  }
+  .info{
+    margin-top: 5rem;
+    padding: 1rem;
+  }
+  .current{
+    margin-top: 4rem;
+    padding: 0 1rem;
+    gap: 1rem;
+  }
+  .mad{
+    padding: 2.5rem;
+  }
+  .sun{
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 850px) {
+  .current{
+    flex-direction: column;
+  }
+  main{
+    height: 130vh;
+  }
+  .video{
+    height: 130vh;
+  }
+  .mad{
+    padding: 1.5rem;
+   /* min-width:  20rem; */
+   max-width: 40rem;
+  }
+  .temp h1{
+    font-size: 3.5rem;
+  }
+  .temp h4{
+    font-size: 1.5rem;
+  }
+  .sunn{
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .mad{
+    width: 35rem;
+  }
+
+}
+@media screen and (max-width: 500px) {
+  .mad{
+   max-width:  27rem;
+    height: 12rem;
+  }
+  .sunn{
+    font-size: 0.8rem;
+  }
+  .sun{font-size: 1rem;}
+  .date{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: unset;
+  }
+  .date h2{
+    text-align: center;
+    padding-top: 3rem;
+    font-size: 3rem;
+  }
+  .current{
+    margin-top: 2rem;
+  }
+  
+
+}
+@media screen and (max-width: 400px) {
+  :root{
+    font-size: 13px;
+  }
+  .sun{font-size: 0.9rem;}
+  /* .mad{
+    max-width:  25rem;
+     height: 15rem;
+   } */
+ 
+}
+@media screen and (max-width: 360px) {
+  :root{
+    font-size: 10px;
+  }
+  .mad{
+    max-width:  30rem;
+     height: 15rem;
+   }
+
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
